Fixed an issue that caused the buttons in the display to use the wrong font.

--- a/src/jsontree.js.scss
+++ b/src/jsontree.js.scss
@@ -95,6 +95,10 @@ div.json-tree-js {
     width: auto;
     overflow: hidden;
     margin: 0 !important;
+
+    button {
+        font-family: var(--heat-js-default-font);
+    }
     
     div.no-click {
         pointer-events: none !important;
